[build-system]
requires = ["setuptools", "wheel", "pysam (<0.16)"]

[tool.pysamstats]
name='pysamstats'
author='Alistair Miles'
author_email='alimanfoo@googlemail.com'
url='https://github.com/alimanfoo/pysamstats'
license='MIT Licenses'
description="""A Python utility for calculating statistics against genome 
            position based on sequence alignments from a SAM, 
            BAM or CRAM file."""
scripts=['scripts/pysamstats']
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
